# combo-geology-nsl

./: .dockerignore  .gitignore  ASYNC_EXECUTION_WORKFLOW.md  FOR_ORIGINAL_DEV.md  Fixes.txt  GEOLOGICAL_AI_SYSTEM_GUIDE.md  MAE_LAPLACE_REFACTOR_SUMMARY.md  README.md  README_REQUIREMENTS.md  UV_WORKFLOW.md  VOXEL_FEATURE_HYPOTHESIS_ARCHITECTURE.md  debug_coherence_calc.py  debug_spatial_pattern.py  quick_test.py  setup_uv_env.sh  test_adaptive_resolution.py  test_bic_isolated.py  test_execution_tools.py  test_interpolation_esa_bic.py  test_mae_laplace_refactor.py  test_naming_and_deduplication.py  test_spatial.py  test_spatial_integration.py  test_two_stage_integration.py  test_two_stage_scoring.py  voxel_coordinates.csv
NSL2-geology-task/: .dockerignore  .env.example  .gitignore  CROSSBREED_IMPLEMENTATION_SUMMARY.md  KAZAKHSTAN_IMPLEMENTATION.md  README.md  SPATIAL_DATA_RESTRUCTURE_SUMMARY.md  WORKFLOW_FIX_REPORT.md  debug_translate_agent.py  debug_workflow.py  flake.centralnode.nix  flake.limiting-factor.nix  flake.nix  pyproject.toml  requirements.txt  run_feature_hypothesis.sh  run_quick_test.sh  simple_workflow_check.py  test_capability_visibility.py  test_crossbreed_selection.py  test_crossbreed_workflow.sh  test_fixed_workflow.sh  test_kazakhstan_grid.py  test_kazakhstan_workflow.sh  test_mcp_direct.py  test_scoring_capability.py  test_workflow_v2.py  validate_implementation.py  validate_workflow_syntax.py
NSL2-geology-task/.macroscope/: ignore
NSL2-geology-task/config/: config-crypto-exploit.toml  config-example.toml  config-feature-hypothesis-aiq.toml  config-feature-hypothesis-australia-gen0.toml  config-feature-hypothesis-kazakhstan-bakeoff.toml  config-feature-hypothesis-kazakhstan-clean.toml  config-feature-hypothesis-kazakhstan-dual.toml  config-feature-hypothesis-kazakhstan-external.toml  config-feature-hypothesis-kazakhstan-gemma4.toml  config-feature-hypothesis-kazakhstan-gen1.toml  config-feature-hypothesis-kazakhstan-l40s.toml  config-feature-hypothesis-kazakhstan-local-h100.toml  config-feature-hypothesis-kazakhstan-vllm-lora.toml  config-feature-hypothesis-kazakhstan-vllm.toml  config-feature-hypothesis-kazakhstan.toml  config-forked-exploit-msagent-qwen3-moe.toml  config-forked-exploit-msagent-qwen3.toml  config-forked-exploit-msagent.toml  config-forked-exploit.toml  config-geology-graph-aiq-gemma4.toml  config-geology-graph-aiq.toml  config-geology-graph-msagent.toml  config-memory-cleanup-aiq.toml  config-memory-cleanup-msagent-sglang.toml  config-memory-cleanup-msagent.toml  config-parallel-test.toml  config-test-loop-llama.toml
NSL2-geology-task/docs/: file-rotation-design.md  metrics-guide.md
NSL2-geology-task/scripts/: aggregate_sft.py  aggregate_sft_asis.py  aggregate_sft_recency.py  analyze_metrics.py  analyze_sft_token_lengths.py  apply_retroactive_filter.py  build_forked_images.sh  build_harness_images.py  build_rehearsal_mix.py  fetch_verified_sources.py  generate_training_data.py  provision_runpod_train.py  provision_runpod_vllm.py  replay_scoring.py  run_episode.py  run_train_loop.py  run_train_loop.py.orig  run_train_loop_resumable.sh  runpod_train_bootstrap.sh  sglang_toolcall_smoke.py  smoke_fork_all.py  viz_kg_voxels.py  warm_rpc_cache.py  warm_rpc_sqlite_cache.py
NSL2-geology-task/src/: container.py  display.py  helper.py  parallel.py  paths.py
NSL2-geology-task/tasks/: crypto_exploit.py  feature_hypothesis.py  feature_hypothesis_australia.py  feature_hypothesis_kazakhstan.py  forked_exploit.py  geology_graph.py  memory_cleanup.py  voxel_features
NSL2-geology-task/tests/: debug_translate_agent.py  (+90 more)
graph-to-voxel-mcp-main/: .dockerignore  .gitignore  README.md  docker-compose.yml  flake.nix  pyproject.toml
voxel-features-mcp/: README.md  pyproject.toml  requirements.txt
(+1021 files in other folders)
