[project]
name = "negative-space-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.71.0",
    "docker>=7.1.0",
    "huggingface-hub>=0.25.0",
    "loguru>=0.7.0",
    "openai>=1.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "result>=0.17.0",
    "toml>=0.10.2",
    "tqdm>=4.66.0",
    "typing-extensions>=4.0.0",
    "unsloth>=2026.4.8",
    "datasets>=2.0.0",
    "peft>=0.14.0",
    "torch>=2.0.0",
    "transformers>=5.5.0,<5.6.0",
    "trl>=0.15.0",
    "wandb>=0.19.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "mcp>=1.1.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "voxel-features-mcp",
    "duckduckgo-search>=6.0.0",
]

[project.optional-dependencies]
analysis = [
    "openpyxl>=3.0.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.0",
    "rapidfuzz>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tasks*", "scripts*"]
namespaces = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
voxel-features-mcp = { path = "../voxel-features-mcp", editable = true }
