[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-to-voxel-mcp"
version = "0.1.0"
description = "Graph-to-voxel geological representation baseline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "0xEljh" }]
dependencies = [
  "networkx>=3.3",
  "loopstructural>=1.6",
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "scipy>=1.12",
  "typer>=0.12",
  "xarray>=2024.5",
  "zarr>=2.17,<3",
]

[project.optional-dependencies]
viz = ["pyvista>=0.43", "matplotlib>=3.8"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5",
    "pytest-asyncio>=0.24",
]
mcp = [
    "mcp>=1.9",
    "filelock>=3.13",
]
data = [
    "pyarrow>=16",
    "duckdb>=1.0",
]
geo = [
    "geopandas>=1.0",
    "rasterio>=1.3",
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.10",
]

[project.scripts]
g2v = "graph_to_voxel.cli:app"
g2v-mcp = "graph_to_voxel.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["graph_to_voxel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
