[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxel-features-mcp"
version = "0.1.0"
description = "Voxel feature layer store with MDL/MI scoring for hypothesis-driven geological discovery"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5",
    "pytest-asyncio>=0.24",
]
mcp = [
    "mcp>=1.9",
    "filelock>=3.13",
]
data = [
    "polars>=1.0",
    "pyarrow>=16",
    "duckdb>=1.0",
]
geo = [
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
]

[project.scripts]
vfm = "voxel_features.cli:app"
vfm-mcp = "voxel_features.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["voxel_features"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
